--- a/src/main/resources/templates/thanks-page.html
+++ b/src/main/resources/templates/thanks-page.html
@@ -82,54 +82,42 @@
 
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <div class="navbar-nav">
-                <a href="/menu" class="nav-item nav-link">
-                    Menu
-                </a>
-                <a href="/cart" class="nav-item nav-link active" th:if="${session.username!=null}">
-                    Cart
-                </a>
-                <a href="/myorders" class="nav-item nav-link" th:if="${session.username!=null}">
-                    My Orders
-                </a>
+                <a href="/menu" class="nav-item nav-link" th:text="#{header.menu}"/>
+                <a href="/cart" th:text="#{header.cart}" class="nav-item nav-link active"
+                   th:if="${session.username!=null}"/>
+                <a href="/myorders" th:text="#{header.my_orders}" class="nav-item nav-link"
+                   th:if="${session.username!=null}"/>
             </div>
             <div class="nav-item dropdown ml-auto">
                 <a class="nav-link dropdown-toggle" href="" id="dropdown09" style="color:black;" data-toggle="dropdown"
                    aria-haspopup="true" aria-expanded="false">
-                    <th:if test="${sessionScope.lang!='ua'}">
-                        <span class="flag-icon flag-icon-us"/>
-                    </th:if>
-                    <th:if test="${sessionScope.lang=='ua'}">
-                        <span class="flag-icon flag-icon-${sessionScope.lang}"> </span>
-                    </th:if>
-                    Language
+                    <span class="flag-icon flag-icon-us" th:if="${session.lang!='ua'}"/>
+                    <span class="flag-icon flag-icon-${sessionScope.lang}" th:if="${session.lang=='ua'}"/>
+                    <!-- <a href="#" th:text="#{header.language}"></a>-->
                 </a>
-                <div class="dropdown-menu" aria-labelledby="dropdown09">
-                    <a class="dropdown-item" href="/controller?command=cartList&sessionLocale=ua"><span
-                            class="flag-icon flag-icon-ua"> </span>
-                        Ukrainian
+                <div class="dropdown-menu" style="width: 20px">
+                    <a class="dropdown-item" th:href="@{/menu/list(sessionLocale='ua')}">
+                        <span class="flag-icon flag-icon-ua"/>
                     </a>
-                    <a class="dropdown-item" href="/controller?command=cartList&sessionLocale=en"><span
-                            class="flag-icon flag-icon-us"> </span>
-                        English
+                    <a class="dropdown-item" th:href="@{/menu/list(sessionLocale='en')}">
+                        <span class="flag-icon flag-icon-us"/>
                     </a>
                 </div>
             </div>
             <div class="navbar-nav">
-                <a href="/registration" th:if="${session.username==null}" class="nav-item nav-link"></span>
-                    Registration
-                </a>
-                <a href="/login" th:if="${session.username==null}" class="nav-item nav-link"></span>
-                    Login
-                </a>
-                <a href="/controller?command=logout" th:if="${session.username!=null}" class="nav-item nav-link"></span>
-                    Logout
-                </a>
+                <a href="/registration" th:if="${session.username==null}" class="nav-item nav-link"
+                   th:text="#{header.registration}"/>
+                <a href="/login" th:if="${session.username==null}" class="nav-item nav-link" th:text="#{header.login}"/>
+                <a href="/logout" th:if="${session.username!=null}" class="nav-item nav-link"
+                   th:text="#{header.logout}"/>
             </div>
 
             <div th:if="${session.username!=null}">
-                <a href="/cart">
-            <span class="fa-stack fa-2x has-badge" data-count="${sessionScope.cart.size()}">
-                    <i class="fa fa-circle fa-stack-2x fa-inverse"></i>
+                <a th:href="@{/cart}">
+            <span class="fa-stack fa-2x has-badge">
+                    <i style="" class="fa fa-shopping-cart fa-stack-2x red-cart"></i>
+                </span>
+                    <span class="fa-stack fa-2x has-badge" th:text="${cart_size}">
                     <i style="" class="fa fa-shopping-cart fa-stack-2x red-cart"></i>
                 </span>
                 </a>
