--- a/src/main/resources/templates/my-orders.html
+++ b/src/main/resources/templates/my-orders.html
@@ -36,12 +36,13 @@
                    aria-haspopup="true" aria-expanded="false">
                     <span class="flag-icon flag-icon-us" th:if="${session.lang!='ua'}"/>
                     <span class="flag-icon flag-icon-${sessionScope.lang}" th:if="${session.lang=='ua'}"/>
+                    <!-- <a href="#" th:text="#{header.language}"></a>-->
                 </a>
                 <div class="dropdown-menu" style="width: 20px">
-                    <a class="dropdown-item" th:href="@{/menu/list(sessionLocale='ua')}">
+                    <a class="dropdown-item" th:href="@{/myorders(lang='ua')}">
                         <span class="flag-icon flag-icon-ua"/>
                     </a>
-                    <a class="dropdown-item" th:href="@{/menu/list(sessionLocale='en')}">
+                    <a class="dropdown-item" th:href="@{/myorders(lang='en')}">
                         <span class="flag-icon flag-icon-us"/>
                     </a>
                 </div>
