--- a/src/main/resources/templates/thanks-page.html
+++ b/src/main/resources/templates/thanks-page.html
@@ -96,10 +96,10 @@
                     <!-- <a href="#" th:text="#{header.language}"></a>-->
                 </a>
                 <div class="dropdown-menu" style="width: 20px">
-                    <a class="dropdown-item" th:href="@{/menu/list(sessionLocale='ua')}">
+                    <a class="dropdown-item" th:href="@{/thanks-page(lang='ua')}">
                         <span class="flag-icon flag-icon-ua"/>
                     </a>
-                    <a class="dropdown-item" th:href="@{/menu/list(sessionLocale='en')}">
+                    <a class="dropdown-item" th:href="@{/thanks-page(lang='en')}">
                         <span class="flag-icon flag-icon-us"/>
                     </a>
                 </div>
