--- a/src/main/resources/templates/login-main.html
+++ b/src/main/resources/templates/login-main.html
@@ -11,22 +11,22 @@
 </head>
 <body>
 <article class="card-body mx-auto" style="max-width: 400px;">
-    <form th:action="@{/login}" th:method="post">
+    <form th:action="@{/login-main}" th:method="post">
         <label style="color: red" th:text="${session.message}"></label>
         <div class="form-group input-group">
             <div class="input-group-prepend">
                 <span class="input-group-text"> <i class="fa fa-lock"></i> </span>
             </div>
-            <input name="username" class="form-control" placeholder="Username" type="username">
+            <input name="username" class="form-control" th:placeholder="#{login.username}" type="username">
         </div>
         <div class="form-group input-group">
             <div class="input-group-prepend">
                 <span class="input-group-text"> <i class="fa fa-lock"></i> </span>
             </div>
-            <input name="password" class="form-control" placeholder="Password" type="password">
+            <input name="password" class="form-control" th:placeholder="#{login.password}" type="password">
         </div>
         <div class="form-group">
-            <button style="height: 50px" type="submit" class="btn btn-primary btn-block">Login</button>
+            <button style="height: 50px" type="submit" class="btn btn-primary btn-block" th:text="#{login.login}"></button>
         </div>
     </form>
 </article>
